# electra

./: .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md
doc/character/: electra.kra
doc/mdbook/: book.toml
doc/mdbook/src/: SUMMARY.md  api-placement.md  api-wires.md
include/: CMakeLists.txt
include/electra/: area.hpp  placements.hpp  wire.hpp  wires.hpp
include/electra/wire/: const_iterator.hpp  decode.hpp  encode.hpp  traits.hpp
test/: CMakeLists.txt  test.cpp  tests.cpp
test/include/electra/: area.cpp  placements.cpp  wires.cpp
test/include/electra/wire/: decode.cpp  encode.cpp
